--- a/painel.html
+++ b/painel.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mini CRM - Serviços de TI</title>
+    <title>KL CRM - Serviços de TI</title>
 
     <!-- Bootstrap 5 CSS -->
     <link
@@ -119,7 +119,7 @@
         <div class="col-md-3 col-lg-2 d-md-block sidebar collapse">
           <div class="position-sticky pt-3">
             <div class="text-center mb-4">
-              <h4>Mini CRM</h4>
+              <h4>KL CRM</h4>
               <p class="small">Serviços de TI</p>
             </div>
 
