--- a/painel.html
+++ b/painel.html
@@ -202,5 +202,12 @@
     <!-- Scripts da aplicação -->
     <script type="module" src="./js/app.js"></script>
     <script type="module" src="./js/scripts.js"></script>
+    // Adicione este script no início do <head> em painel.html
+      <script>
+        // Verifica autenticação imediatamente
+        if (sessionStorage.getItem('authenticated') !== 'true') {
+          window.location.href = 'index.html';
+        }
+      </script>
   </body>
 </html>
