--- a/painel.html
+++ b/painel.html
@@ -16,608 +16,9 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-
+    <link href="./css/painel.css" rel="stylesheet">
     <!-- Custom CSS -->
-    <style>
- /* 
- * KL CRM - CSS Minimalista e Profissional
- * Design limpo, moderno e totalmente responsivo
- */
 
-:root {
-  /* Paleta principal - tons neutros */
-  --color-primary: #2563eb;       /* Azul principal */
-  --color-primary-dark: #1d4ed8;  /* Azul escuro para hover */
-  --color-secondary: #0f172a;     /* Azul escuro quase preto */
-  --color-tertiary: #64748b;      /* Cinza azulado */
-  
-  /* Tons neutros */
-  --color-white: #ffffff;
-  --color-gray-50: #f8fafc;
-  --color-gray-100: #f1f5f9;
-  --color-gray-200: #e2e8f0;
-  --color-gray-300: #cbd5e1;
-  --color-gray-400: #94a3b8;
-  --color-gray-500: #64748b;
-  --color-gray-600: #475569;
-  --color-gray-700: #334155;
-  --color-gray-800: #1e293b;
-  --color-gray-900: #0f172a;
-  
-  /* Cores semânticas */
-  --color-success: #10b981;
-  --color-warning: #f59e0b;
-  --color-danger: #ef4444;
-  --color-info: #3b82f6;
-  
-  /* Tamanhos */
-  --size-1: 0.25rem;
-  --size-2: 0.5rem;
-  --size-3: 0.75rem;
-  --size-4: 1rem;
-  --size-5: 1.25rem;
-  --size-6: 1.5rem;
-  --size-8: 2rem;
-  --size-10: 2.5rem;
-  --size-12: 3rem;
-  --size-16: 4rem;
-  
-  /* Fontes */
-  --font-sans: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  
-  /* Efeitos */
-  --shadow-sm: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
-  --shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
-  --shadow-md: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
-  --shadow-lg: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
-  
-  /* Arredondamentos */
-  --radius-sm: 0.125rem;
-  --radius: 0.25rem;
-  --radius-md: 0.375rem;
-  --radius-lg: 0.5rem;
-  --radius-full: 9999px;
-  
-  /* Transições */
-  --transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
-  --transition-fast: all 0.15s cubic-bezier(0.4, 0, 0.2, 1);
-  --transition-slow: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-/* Reset e estilos base */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-html, body {
-  height: 100%;
-  font-family: var(--font-sans);
-  font-size: 16px;
-  line-height: 1.5;
-  color: var(--color-gray-800);
-  background-color: var(--color-gray-100);
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-/* Layout principal */
-.container-fluid {
-  padding: 0;
-  height: 100%;
-}
-
-.row {
-  margin: 0;
-  height: 100%;
-}
-
-/* Sidebar */
-.sidebar {
-  background-color: var(--color-secondary);
-  padding: 0;
-  height: 100vh;
-  position: fixed;
-  width: 250px;
-  z-index: 1030;
-  transition: var(--transition);
-  box-shadow: var(--shadow);
-}
-
-.sidebar .text-center {
-  padding: var(--size-5) 0;
-  background-color: rgba(0, 0, 0, 0.1);
-  border-bottom: 1px solid rgba(255, 255, 255, 0.05);
-}
-
-.sidebar h4 {
-  color: var(--color-white);
-  font-weight: 500;
-  margin: 0;
-  font-size: 1.25rem;
-}
-
-.sidebar .small {
-  color: var(--color-gray-400);
-  font-size: 0.85rem;
-  opacity: 0.8;
-}
-
-.sidebar .nav {
-  padding: var(--size-4);
-}
-
-.sidebar .nav-link {
-  color: var(--color-gray-300);
-  padding: var(--size-3) var(--size-4);
-  border-radius: var(--radius);
-  margin-bottom: var(--size-2);
-  font-weight: 500;
-  transition: var(--transition);
-  border-left: 3px solid transparent;
-}
-
-.sidebar .nav-link:hover {
-  color: var(--color-white);
-  background-color: rgba(255, 255, 255, 0.05);
-}
-
-.sidebar .nav-link.active {
-  color: var(--color-white);
-  background-color: rgba(37, 99, 235, 0.2);
-  border-left-color: var(--color-primary);
-}
-
-.sidebar .nav-link i {
-  width: 20px;
-  margin-right: var(--size-3);
-  text-align: center;
-  opacity: 0.85;
-}
-
-/* Conteúdo principal */
-.col-md-9.ms-sm-auto {
-  padding: var(--size-6);
-  margin-left: 250px; /* Largura da sidebar */
-  width: calc(100% - 250px);
-  transition: var(--transition);
-  background-color: var(--color-gray-100);
-}
-
-/* Cabeçalhos da página */
-.border-bottom {
-  border-color: var(--color-gray-200) !important;
-  padding-bottom: var(--size-4);
-  margin-bottom: var(--size-6);
-}
-
-h1.h2 {
-  color: var(--color-gray-900);
-  font-weight: 600;
-  font-size: 1.5rem;
-}
-
-/* Cards */
-.card {
-  background-color: var(--color-white);
-  border: none;
-  border-radius: var(--radius-md);
-  box-shadow: var(--shadow-sm);
-  transition: var(--transition);
-  margin-bottom: var(--size-5);
-  overflow: hidden;
-}
-
-.card:hover {
-  box-shadow: var(--shadow-md);
-}
-
-.card-header {
-  padding: var(--size-4) var(--size-5);
-  background-color: var(--color-white);
-  border-bottom: 1px solid var(--color-gray-200);
-  font-weight: 500;
-}
-
-.card-header h5 {
-  margin: 0;
-  font-size: 1rem;
-  color: var(--color-gray-900);
-}
-
-.card-body {
-  padding: var(--size-5);
-}
-
-.card-footer {
-  background-color: var(--color-gray-50);
-  border-top: 1px solid var(--color-gray-200);
-  padding: var(--size-3) var(--size-5);
-}
-
-/* Cards estatísticos */
-.card-stats {
-  border-left: 4px solid var(--color-primary);
-  transition: var(--transition);
-}
-
-.card-stats:hover {
-  transform: translateY(-4px);
-}
-
-.card-stats .card-title {
-  color: var(--color-gray-500);
-  font-size: 0.875rem;
-  text-transform: uppercase;
-  letter-spacing: 0.5px;
-  font-weight: 500;
-}
-
-.card-stats h3 {
-  font-size: 1.5rem;
-  font-weight: 600;
-  margin: var(--size-2) 0;
-  color: var(--color-gray-900);
-}
-
-.card-stats.card-receitas {
-  border-left-color: var(--color-success);
-}
-
-.card-stats.card-despesas {
-  border-left-color: var(--color-danger);
-}
-
-/* Tabelas */
-.table {
-  margin-bottom: 0;
-}
-
-.table th {
-  padding: var(--size-3) var(--size-4);
-  font-weight: 600;
-  color: var(--color-gray-700);
-  border-bottom: 2px solid var(--color-gray-200);
-  background-color: var(--color-gray-50);
-  font-size: 0.875rem;
-  text-transform: uppercase;
-  letter-spacing: 0.5px;
-}
-
-.table td {
-  padding: var(--size-4);
-  vertical-align: middle;
-  border-bottom: 1px solid var(--color-gray-200);
-  color: var(--color-gray-700);
-}
-
-.table-hover tbody tr:hover {
-  background-color: var(--color-gray-50);
-}
-
-/* Badges */
-.badge {
-  padding: var(--size-1) var(--size-2);
-  border-radius: var(--radius-full);
-  font-weight: 500;
-  font-size: 0.75rem;
-}
-
-.bg-info, .badge-pendente {
-  background-color: var(--color-info) !important;
-  color: var(--color-white);
-}
-
-.bg-warning, .badge-em-andamento {
-  background-color: var(--color-warning) !important;
-  color: var(--color-gray-900);
-}
-
-.bg-success, .badge-concluido {
-  background-color: var(--color-success) !important;
-  color: var(--color-white);
-}
-
-.bg-danger, .badge-cancelado {
-  background-color: var(--color-danger) !important;
-  color: var(--color-white);
-}
-
-/* Botões */
-.btn {
-  padding: var(--size-2) var(--size-4);
-  border-radius: var(--radius);
-  font-weight: 500;
-  font-size: 0.875rem;
-  transition: var(--transition);
-  border: none;
-  box-shadow: var(--shadow-sm);
-}
-
-.btn:hover {
-  box-shadow: var(--shadow);
-  transform: translateY(-1px);
-}
-
-.btn-sm {
-  padding: var(--size-1) var(--size-2);
-  font-size: 0.75rem;
-}
-
-.btn-primary {
-  background-color: var(--color-primary);
-  color: var(--color-white);
-}
-
-.btn-primary:hover, .btn-primary:focus {
-  background-color: var(--color-primary-dark);
-}
-
-.btn-outline-primary {
-  color: var(--color-primary);
-  border: 1px solid var(--color-primary);
-  background-color: transparent;
-}
-
-.btn-outline-primary:hover {
-  background-color: var(--color-primary);
-  color: var(--color-white);
-}
-
-.btn-outline-secondary {
-  color: var(--color-gray-700);
-  border: 1px solid var(--color-gray-300);
-  background-color: transparent;
-}
-
-.btn-outline-success {
-  color: var(--color-success);
-  border: 1px solid var(--color-success);
-  background-color: transparent;
-}
-
-.btn-outline-danger {
-  color: var(--color-danger);
-  border: 1px solid var(--color-danger);
-  background-color: transparent;
-}
-
-/* Formulários */
-.form-label {
-  font-weight: 500;
-  color: var(--color-gray-700);
-  font-size: 0.875rem;
-  margin-bottom: var(--size-2);
-}
-
-.form-control {
-  padding: var(--size-2) var(--size-3);
-  border: 1px solid var(--color-gray-300);
-  border-radius: var(--radius);
-  transition: var(--transition);
-  height: auto;
-  font-size: 0.95rem;
-}
-
-.form-control:focus {
-  border-color: var(--color-primary);
-  box-shadow: 0 0 0 2px rgba(37, 99, 235, 0.1);
-}
-
-.form-select {
-  padding: var(--size-2) var(--size-3);
-  border: 1px solid var(--color-gray-300);
-  border-radius: var(--radius);
-  transition: var(--transition);
-  height: auto;
-  font-size: 0.95rem;
-  background-position: right var(--size-3) center;
-}
-
-.form-select:focus {
-  border-color: var(--color-primary);
-  box-shadow: 0 0 0 2px rgba(37, 99, 235, 0.1);
-}
-
-/* Modais */
-.modal-content {
-  border: none;
-  border-radius: var(--radius-lg);
-  box-shadow: var(--shadow-lg);
-}
-
-.modal-header {
-  border-bottom: 1px solid var(--color-gray-200);
-  padding: var(--size-4) var(--size-5);
-  background-color: var(--color-white);
-}
-
-.modal-title {
-  font-weight: 600;
-  font-size: 1.1rem;
-  color: var(--color-gray-900);
-}
-
-.modal-body {
-  padding: var(--size-5);
-}
-
-.modal-footer {
-  border-top: 1px solid var(--color-gray-200);
-  padding: var(--size-4) var(--size-5);
-}
-
-/* Toast (notificações) */
-.toast-container {
-  z-index: 1060;
-}
-
-.toast {
-  border: none;
-  border-radius: var(--radius);
-  box-shadow: var(--shadow-lg);
-  background-color: var(--color-white);
-}
-
-.toast-header {
-  border-bottom: 1px solid var(--color-gray-200);
-  background-color: var(--color-white);
-}
-
-/* Garantias */
-.garantia-proxima {
-  background-color: rgba(245, 158, 11, 0.1);
-}
-
-.garantia-urgente {
-  background-color: rgba(239, 68, 68, 0.1);
-}
-
-/* Loading spinner */
-.spinner-container, .spinner-border {
-  color: var(--color-primary);
-}
-
-/* Responsividade */
-@media (max-width: 767.98px) {
-  /* Sidebar em dispositivos móveis */
-  .sidebar {
-    left: -250px;
-    position: fixed;
-    top: 0;
-    height: 100%;
-    z-index: 1040;
-    transition: var(--transition);
-  }
-  
-  .sidebar.show {
-    left: 0;
-  }
-  
-  /* Conteúdo principal em dispositivos móveis */
-  .col-md-9.ms-sm-auto {
-    margin-left: 0;
-    width: 100%;
-    padding: var(--size-4);
-  }
-  
-  /* Estilos para o botão toggle do menu em dispositivos móveis */
-  .mobile-menu-toggle {
-    position: fixed;
-    top: var(--size-4);
-    left: var(--size-4);
-    width: 40px;
-    height: 40px;
-    background-color: var(--color-primary);
-    color: var(--color-white);
-    border: none;
-    border-radius: var(--radius);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 1030;
-    cursor: pointer;
-    box-shadow: var(--shadow);
-  }
-  
-  /* Overlay para quando o sidebar está aberto */
-  .sidebar-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 1035;
-    display: none;
-  }
-  
-  .sidebar-overlay.show {
-    display: block;
-  }
-  
-  /* Layout de cartões em dispositivos móveis */
-  .row > [class^="col-"] {
-    margin-bottom: var(--size-4);
-  }
-  
-  /* Cabeçalhos responsivos */
-  .d-flex.justify-content-between {
-    flex-direction: column;
-    gap: var(--size-4);
-  }
-  
-  .d-flex.justify-content-between .btn-toolbar {
-    margin-left: 0 !important;
-  }
-  
-  /* Tabelas responsivas */
-  .table th, .table td {
-    white-space: nowrap;
-  }
-
-  /* Dashboard em dispositivos móveis */
-  .card-stats h3 {
-    font-size: 1.25rem;
-  }
-
-  .card-stats .card-title {
-    font-size: 0.75rem;
-  }
-  
-  /* Modal em dispositivos móveis */
-  .modal-dialog {
-    margin: var(--size-3);
-  }
-}
-
-/* Correções específicas para telas muito pequenas */
-@media (max-width: 575.98px) {
-  .btn-toolbar .btn-group {
-    margin-bottom: var(--size-2);
-    width: 100%;
-  }
-  
-  .btn-toolbar .btn-group .btn {
-    width: 100%;
-  }
-  
-  .card-body {
-    padding: var(--size-4);
-  }
-  
-  .table th, .table td {
-    padding: var(--size-2);
-    font-size: 0.85rem;
-  }
-  
-  .modal-body {
-    padding: var(--size-4);
-  }
-}
-
-/* Estilos para melhorar desempenho em dispositivos móveis */
-@media (max-width: 767.98px) {
-  .card, .table, .btn {
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-  }
-}
-
-/* Utilidades adicionais */
-.text-muted {
-  color: var(--color-gray-500) !important;
-}
-
-.icon-xs {
-  font-size: 0.75rem;
-}
-
-.w-100 {
-  width: 100%;
-}
-    </style>
   </head>
   <body>
     <div class="container-fluid">
