--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@
                 Lembrar-me
               </label>
             </div>
-            <a href="#" class="text-decoration-none">Esqueceu a senha?</a>
           </div>
           
           <button type="submit" class="btn btn-primary btn-login w-100">
@@ -75,7 +74,7 @@
       </div>
       
       <div class="login-footer">
-        &copy; 2025 TI Service CRM. Todos os direitos reservados.
+        &copy; 2025 TI KL CRM. Todos os direitos reservados.
       </div>
     </div>
   </div>
