--- a/painel.html
+++ b/painel.html
@@ -172,6 +172,7 @@
 
     <!-- Chart.js -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.1/dist/chart.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     
     <!-- Scripts da aplicação -->
     <script type="module" src="./js/app.js"></script>
