--- a/index.html
+++ b/index.html
@@ -432,31 +432,16 @@
           </div>
           <div class="form-group">
             <label for="client-email">Email</label>
-            <input
-              type="email"
-              class="form-control"
-              id="client-email"
-              required
-            />
-          </div>
-          <div class="form-group">
+            <input type="email" class="form-control" id="client-email">
+        </div>
+        <div class="form-group">
             <label for="client-phone">Telefone</label>
-            <input
-              type="text"
-              class="form-control"
-              id="client-phone"
-              required
-            />
-          </div>
-          <div class="form-group">
+            <input type="text" class="form-control" id="client-phone">
+        </div>
+        <div class="form-group">
             <label for="client-address">Endereço</label>
-            <input
-              type="text"
-              class="form-control"
-              id="client-address"
-              required
-            />
-          </div>
+            <input type="text" class="form-control" id="client-address">
+        </div>
           <div class="form-group">
             <button type="submit" class="btn btn-primary">Salvar</button>
           </div>
