--- a/index.html
+++ b/index.html
@@ -526,6 +526,7 @@
             <select class="form-control" id="order-status" required>
               <option value="pending">Pendente</option>
               <option value="in-progress">Em andamento</option>
+              <option value="canceled">Cancelar</option>
               <option value="completed">Concluído</option>
             </select>
           </div>
@@ -607,7 +608,7 @@
         </div>
       </div>
     </div> <!-- Adicione esta tag de fechamento -->
-    
+
     <!-- importação da biblioteca Supabase para -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="script.js"></script>
