--- a/index.html
+++ b/index.html
@@ -60,6 +60,36 @@
         </div>
       </div>
     </div>
+    <div id="userModal" class="modal">
+      <div class="modal-content">
+          <h2 id="userModalTitle">Editar Usuário</h2>
+          <form id="userForm">
+              <input type="hidden" id="user-id">
+              <div class="form-group">
+                  <label for="user-name">Nome</label>
+                  <input type="text" id="user-name" required>
+              </div>
+              <div class="form-group">
+                  <label for="user-email">Email</label>
+                  <input type="email" id="user-email" required>
+              </div>
+              <div class="form-group">
+                  <label for="user-password">Senha</label>
+                  <input type="password" id="user-password">
+                  <small>Deixe em branco para manter a senha atual</small>
+              </div>
+              <div class="form-group">
+                  <label for="user-role">Função</label>
+                  <select id="user-role">
+                      <option value="user">Usuário</option>
+                      <option value="admin">Administrador</option>
+                  </select>
+              </div>
+              <button type="submit" class="btn btn-primary">Salvar</button>
+              <button type="button" class="btn btn-secondary" onclick="document.getElementById('userModal').style.display='none'">Cancelar</button>
+          </form>
+      </div>
+  </div>
 
     <!-- Modal de Registro -->
     <div id="register-modal" class="modal">
